--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unistep",
   "version": "0.1.0",
+  "homepage": "https://executor-create.github.io/Unistep",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,11 +18,12 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "prettier": "^2.8.7"
   },
   "scripts": {
