--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prettier": "^2.8.7"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
