--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://executor-create.github.io/Unistep",
+  "homepage": "https://executor-create.github.io/Unistep",
   "name": "unistep",
   "version": "0.1.0",
   "private": true,
@@ -27,12 +27,12 @@
     "prettier": "^2.8.7"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
