--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://executor-create.github.io/Unistep",
+  "homepage": ".",
   "name": "unistep",
   "version": "0.1.0",
   "private": true,
