--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": ".",
   "name": "unistep",
   "version": "0.1.0",
   "private": true,
@@ -23,16 +22,13 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0",
     "prettier": "^2.8.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
